argocd-manifests/apps/nodejs-app/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: nodejs-dev.local
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: dev-nodejs-app
            port:
              number: 80
